переименование классов по BEM

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,23 +15,23 @@
 <body>
     <!--Хэдер-->
     <header class="header">
-        <div class="container main-nav">
-            <nav class="nav">
-                <a href="" class="logo">Web<span class="logo-accent">Studio</span> </a>
-                <ul class="nav-list">
-                    <li class="nav-list-item"><a href="./index.html" class="link">Студия</a></li>
-                    <li class="nav-list-item"><a href="" class="link current">Портфолио</a></li>
-                    <li class="nav-list-item"><a href="#contacts" class="link">Контакты</a></li>
+        <div class="container header__container">
+            <nav class="header__nav">
+                <a href="" class="logo">Web<span class="logo--accent">Studio</span> </a>
+                <ul class="header__list">
+                    <li class="header__item"><a href="./index.html" class="header__link">Студия</a></li>
+                    <li class="header__item"><a href="" class="header__link header__link--current">Портфолио</a></li>
+                    <li class="header__item"><a href="#contacts" class="header__link">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="list-contacts">
-                <li class="item-contacts"><a href="mailto:info@devstudio.com" class="header-contacts">
-                        <svg class="header-icon" width="16" height="12">
+            <ul class="contact-info">
+                <li class="contact-info__item"><a href="mailto:info@devstudio.com" class="contact-info__link">
+                        <svg class="contact-info__icon" width="16" height="12">
                             <use href="./images/icons/symbol-defs.svg#icon-envelope-opt"></use>
                         </svg> info@devstudio.com</a>
                 </li>
-                <li class="item-contacts"><a href="tel:+380961111111" class="header-contacts">
-                        <svg class="header-icon" width="10" height="16">
+                <li class="contact-info__item"><a href="tel:+380961111111" class="contact-info__link">
+                        <svg class="contact-info__icon" width="10" height="16">
                             <use href="./images/icons/symbol-defs.svg#icon-smartphone-opt"></use>
                         </svg> +38 096 111 11 11 </a>
                 </li>
