--- a/index.html
+++ b/index.html
@@ -12,191 +12,199 @@
     <link rel="stylesheet" href="./css/styles.css"> 
 </head>
 <body >
+
     <!--Хэдер-->
+
 <header class="header">
-    <div class="container main-nav">
-        <nav class="nav">
-        <a href="" class="logo">Web<span class="logo-accent">Studio</span> </a>
-        <ul class="nav-list">
-            <li class="nav-list-item"><a href="" class="link current">Студия</a></li>
-            <li class="nav-list-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li class="nav-list-item"><a href="#contacts" class="link">Контакты</a></li>
+    <div class="container header__container">
+        <nav class="header__nav">
+        <a href="" class="logo">Web<span class="logo--accent">Studio</span> </a>
+        <ul class="header__list">
+            <li class="header__item"><a href="" class="header__link header__link--current">Студия</a></li>
+            <li class="header__item"><a href="./portfolio.html" class="header__link">Портфолио</a></li>
+            <li class="header__item"><a href="#contacts" class="header__link">Контакты</a></li>
         </ul>
         </nav>
-        <ul class="list-contacts">
-        <li class="item-contacts"><a href="mailto:info@devstudio.com" class="header-contacts">
-             <svg class="header-icon" width="16" height="12"><use href="./images/icons/symbol-defs.svg#icon-envelope-opt"></use></svg> info@devstudio.com</a>
+        <ul class="contact-info">
+        <li class="contact-info__item"><a href="mailto:info@devstudio.com" class="contact-info__link">
+             <svg class="contact-info__icon" width="16" height="12"><use href="./images/icons/symbol-defs.svg#icon-envelope-opt"></use></svg> info@devstudio.com</a>
         </li>
-        <li class="item-contacts"><a href="tel:+380961111111" class="header-contacts"> 
-            <svg class="header-icon" width="10" height="16"><use href="./images/icons/symbol-defs.svg#icon-smartphone-opt"></use></svg> +38 096 111 11 11 </a>
+        <li class="contact-info__item"><a href="tel:+380961111111" class="contact-info__link"> 
+            <svg class="contact-info__icon" width="10" height="16"><use href="./images/icons/symbol-defs.svg#icon-smartphone-opt"></use></svg> +38 096 111 11 11 </a>
         </li>
         </ul>
     </div>
 </header>
+
 <!--Основной блок-->
+
 <main>
+
 <!--герой-->
+
     <section class="hero">
-        <div class="overlay">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button data-modal-open type="button" class="hero-button" >Заказать услугу</button>
+        <div class="hero__overlay">
+        <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+        <button data-modal-open type="button" class="hero__button" >Заказать услугу</button>
         </div>
     </section>
+
 <!--Особенности-->
+
     <section class="section features">
         <div class="container">
-            <h2 class="hidden">Особенности</h2>
-            <ul class="list-features">
-                <li class="list-features-item">
-                    <div class="icon-background">
-                    <svg class="features-icon" width="70" height="70">
+            <h2 class="features--hidden">Особенности</h2>
+            <ul class="features__list">
+                <li class="features__item">
+                    <div class="features__bcg">
+                    <svg  width="70" height="70">
                         <use href="./images/icons/symbol-defs.svg#icon-antenna"></use>
                     </svg>
                     </div>
-                <h3 class="subtitle">Внимание к деталям</h3>
-                <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                <h3 class="features__subtitle">Внимание к деталям</h3>
+                <p class="features__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li class="list-features-item">
-                    <div class="icon-background">
-                    <svg class="features-icon" width="70" height="70">
+                <li class="features__item">
+                    <div class="features__bcg">
+                    <svg  width="70" height="70">
                         <use href="./images/icons/symbol-defs.svg#icon-clock"></use>
                     </svg>
                     </div>
-                <h3 class="subtitle">Пунктуальность</h3>
-                <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <h3 class="features__subtitle">Пунктуальность</h3>
+                <p class="features__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li class="list-features-item">
-                    <div class="icon-background">
-                    <svg class="features-icon" width="70" height="70">
+                <li class="features__item">
+                    <div class="features__bcg">
+                    <svg  width="70" height="70">
                         <use href="./images/icons/symbol-defs.svg#icon-diagram"></use>
                     </svg>
                     </div>
-                <h3 class="subtitle">Планирование</h3>
-                <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <h3 class="features__subtitle">Планирование</h3>
+                <p class="features__text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li class="list-features-item">
-                    <div class="icon-background">
-                    <svg class="features-icon" width="70" height="70">
+                <li class="features__item">
+                    <div class="features__bcg">
+                    <svg  width="70" height="70">
                         <use href="./images/icons/symbol-defs.svg#icon-astronaut"></use>
                     </svg>
                     </div>
-                <h3 class="subtitle">Современные технологии</h3>
-                <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <h3 class="features__subtitle">Современные технологии</h3>
+                <p class="features__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
-    </div>
+        </div>
     </section>
 <!--Чем мы занимаемся-->
-    <section class="section doing">
+    <section class="section activities">
         <div class="container">
-            <h2 class="studio-section-title">Чем мы занимаемся</h2>
-            <ul class="list-doing">
-                <li> <div class="doing-thumb"> <img src="images/box1(1).jpg" alt="работа за ноутбуком" width="370"> <p class="doing-action">десктопные приложения</p> </div> </li>
-                <li> <div class="doing-thumb"> <img src="images/box2(1).jpg" alt="мобильный телефон" width="370"> <p class="doing-action">мобильные приложения</p> </div> </li> 
-                <li> <div class="doing-thumb"> <img src="images/box3(1).jpg" alt="цветовые решения" width="370"> <p class="doing-action">дизайнерские решения</p> </div> </li>
+            <h2 class="activities__title">Чем мы занимаемся</h2>
+            <ul class="activities__list">
+                <li> <div class="activities__thumb"> <img src="images/box1(1).jpg" alt="работа за ноутбуком" width="370"> <p class="activities__text">десктопные приложения</p> </div> </li>
+                <li> <div class="activities__thumb"> <img src="images/box2(1).jpg" alt="мобильный телефон" width="370"> <p class="activities__text">мобильные приложения</p> </div> </li> 
+                <li> <div class="activities__thumb"> <img src="images/box3(1).jpg" alt="цветовые решения" width="370"> <p class="activities__text">дизайнерские решения</p> </div> </li>
             </ul>
         </div>
     </section>
  <!--Команда-->
     <section class="section team">
         <div class="container">
-            <h2 class="studio-section-title">Наша команда</h2>
-            <ul class="list-team">
-                <li class="team-card"> <img class="img-team" src="images/img-1.jpg" alt="фото" width="270">
-                    <div class="wrapper-team" ><h3 class="subtitle">Игорь Демьяненко</h3>
-                    <p class="text">Product Designer</p>
-                    <ul class="team-list-social-media">
-                        <li class="team-item-social-media"> 
-                        <a class="wrapper-social-link"  href=""> <svg class="team-symbol-link" width="20" height="20"><use href="./images/icons/symbol-defs.svg#icon-instagram-opt"></use></svg> </a>
+            <h2 class="team__title">Наша команда</h2>
+            <ul class="card-set">
+                <li class="card-set__item"> <img class="team__img" src="images/img-1.jpg" alt="фото" width="270">
+                    <div class="card-set__wrapper" ><h3 class="card-set__subtitle">Игорь Демьяненко</h3>
+                    <p class="card-set__text">Product Designer</p>
+                    <ul class="card-set__social-list">
+                        <li >
+                        <a class="card-set__link"  href=""> <svg class="card-set__icon" width="20" height="20"><use href="./images/icons/symbol-defs.svg#icon-instagram-opt"></use></svg> </a>
                         </li>
-                        <li class="team-item-social-media"> 
-                        <a class="wrapper-social-link" href=""> <svg class="team-symbol-link" width="20" height="20"><use href="./images/icons/symbol-defs.svg#icon-twitter-opt"></use></svg> </a>
+                        <li > 
+                        <a class="card-set__link" href=""> <svg class="card-set__icon" width="20" height="20"><use href="./images/icons/symbol-defs.svg#icon-twitter-opt"></use></svg> </a>
                         </li>
-                        <li class="team-item-social-media"> 
-                        <a class="wrapper-social-link" href=""> <svg class="team-symbol-link" width="20" height="20"><use href="./images/icons/symbol-defs.svg#icon-facebook-opt"></use></svg> </a>
+                        <li > 
+                        <a class="card-set__link" href=""> <svg class="card-set__icon" width="20" height="20"><use href="./images/icons/symbol-defs.svg#icon-facebook-opt"></use></svg> </a>
                         </li>
-                        <li class="team-item-social-media"> 
-                        <a class="wrapper-social-link" href=""> <svg class="team-symbol-link" width="20" height="20"><use href="./images/icons/symbol-defs.svg#icon-linkedin-opt"></use></svg> </a>
+                        <li > 
+                        <a class="card-set__link" href=""> <svg class="card-set__icon" width="20" height="20"><use href="./images/icons/symbol-defs.svg#icon-linkedin-opt"></use></svg> </a>
                         </li>
                     </ul>
                     </div>
                     
                 </li>
-                <li class="team-card"> <img class="img-team" src="images/img-2.jpg" alt="фото" width="270">
-                    <div class="wrapper-team"><h3 class="subtitle">Ольга Репина</h3>
-                    <p class="text">Frontend Developer</p>
-                    <ul class="team-list-social-media">
-                        <li class="team-item-social-media">
-                            <a class="wrapper-social-link" href=""> <svg class="team-symbol-link" width="20" height="20">
+                <li class="card-set__item"> <img class="card-set__img" src="images/img-2.jpg" alt="фото" width="270">
+                    <div class="card-set__wrapper"><h3 class="card-set__subtitle">Ольга Репина</h3>
+                    <p class="card-set__text">Frontend Developer</p>
+                    <ul class="card-set__social-list">
+                        <li >
+                            <a class="card-set__link" href=""> <svg class="card-set__icon" width="20" height="20">
                                     <use href="./images/icons/symbol-defs.svg#icon-instagram-opt"></use>
                                 </svg> </a>
                         </li>
-                        <li class="team-item-social-media">
-                            <a class="wrapper-social-link" href=""> <svg class="team-symbol-link" width="20" height="20">
+                        <li >
+                            <a class="card-set__link" href=""> <svg class="card-set__icon" width="20" height="20">
                                     <use href="./images/icons/symbol-defs.svg#icon-twitter-opt"></use>
                                 </svg> </a>
                         </li>
-                        <li class="team-item-social-media">
-                            <a class="wrapper-social-link" href=""> <svg class="team-symbol-link" width="20" height="20">
+                        <li >
+                            <a class="card-set__link" href=""> <svg class="card-set__icon" width="20" height="20">
                                     <use href="./images/icons/symbol-defs.svg#icon-facebook-opt"></use>
                                 </svg> </a>
                         </li>
-                        <li class="team-item-social-media">
-                            <a class="wrapper-social-link" href=""> <svg class="team-symbol-link" width="20" height="20">
+                        <li >
+                            <a class="card-set__link" href=""> <svg class="card-set__icon" width="20" height="20">
                                     <use href="./images/icons/symbol-defs.svg#icon-linkedin-opt"></use>
                                 </svg> </a>
                         </li>
                     </ul>
                 </div>
                 </li>
-                <li class="team-card"> <img class="img-team" src="images/img-3.jpg" alt="фото" width="270">
-                   <div class="wrapper-team"><h3 class="subtitle">Николай Тарасов</h3>
-                <p class="text">Marketing</p>
-                <ul class="team-list-social-media">
-                    <li class="team-item-social-media">
-                        <a class="wrapper-social-link" href=""> <svg class="team-symbol-link" width="20" height="20">
+                <li class="card-set__item"> <img class="card-set__img" src="images/img-3.jpg" alt="фото" width="270">
+                   <div class="card-set__wrapper"><h3 class="card-set__subtitle">Николай Тарасов</h3>
+                    <p class="card-set__text">Marketing</p>
+                    <ul class="card-set__social-list">
+                    <li >
+                        <a class="card-set__link" href=""> <svg class="card-set__icon" width="20" height="20">
                                 <use href="./images/icons/symbol-defs.svg#icon-instagram-opt"></use>
                             </svg> </a>
                     </li>
-                    <li class="team-item-social-media">
-                        <a class="wrapper-social-link" href=""> <svg class="team-symbol-link" width="20" height="20">
+                    <li >
+                        <a class="card-set__link" href=""> <svg class="card-set__icon" width="20" height="20">
                                 <use href="./images/icons/symbol-defs.svg#icon-twitter-opt"></use>
                             </svg> </a>
                     </li>
-                    <li class="team-item-social-media">
-                        <a class="wrapper-social-link" href=""> <svg class="team-symbol-link" width="20" height="20">
+                    <li >
+                        <a class="card-set__link" href=""> <svg class="card-set__icon" width="20" height="20">
                                 <use href="./images/icons/symbol-defs.svg#icon-facebook-opt"></use>
                             </svg> </a>
                     </li>
-                    <li class="team-item-social-media">
-                        <a class="wrapper-social-link" href=""> <svg class="team-symbol-link" width="20" height="20">
+                    <li >
+                        <a class="card-set__link" href=""> <svg class="card-set__icon" width="20" height="20">
                                 <use href="./images/icons/symbol-defs.svg#icon-linkedin-opt"></use>
                             </svg> </a>
                     </li>
                 </ul>
             </div>
                 </li>
-                <li class="team-card"> <img class="img-team" src="images/img-4.jpg" alt="фото" width="270">
-                    <div class="wrapper-team"><h3 class="subtitle">Михаил Ермаков</h3>
-                    <p class="text">UI Designer</p>
-                    <ul class="team-list-social-media">
-                        <li class="team-item-social-media">
-                            <a class="wrapper-social-link" href=""> <svg class="team-symbol-link" width="20" height="20">
+                <li class="card-set__item"> <img class="card-set__img" src="images/img-4.jpg" alt="фото" width="270">
+                    <div class="card-set__wrapper"><h3 class="card-set__subtitle">Михаил Ермаков</h3>
+                    <p class="card-set__text">UI Designer</p>
+                    <ul class="card-set__social-list">
+                        <li >
+                            <a class="card-set__link" href=""> <svg class="card-set__icon" width="20" height="20">
                                     <use href="./images/icons/symbol-defs.svg#icon-instagram-opt"></use>
                                 </svg> </a>
                         </li>
-                        <li class="team-item-social-media">
-                            <a class="wrapper-social-link" href=""> <svg class="team-symbol-link" width="20" height="20">
+                        <li >
+                            <a class="card-set__link" href=""> <svg class="card-set__icon" width="20" height="20">
                                     <use href="./images/icons/symbol-defs.svg#icon-twitter-opt"></use>
                                 </svg> </a>
                         </li>
-                        <li class="team-item-social-media">
-                            <a class="wrapper-social-link" href=""> <svg class="team-symbol-link" width="20" height="20">
+                        <li >
+                            <a class="card-set__link" href=""> <svg class="card-set__icon" width="20" height="20">
                                     <use href="./images/icons/symbol-defs.svg#icon-facebook-opt"></use>
                                 </svg> </a>
                         </li>
-                        <li class="team-item-social-media">
-                            <a class="wrapper-social-link" href=""> <svg class="team-symbol-link" width="20" height="20">
+                        <li >
+                            <a class="card-set__link" href=""> <svg class="card-set__icon" width="20" height="20">
                                     <use href="./images/icons/symbol-defs.svg#icon-linkedin-opt"></use>
                                 </svg> </a>
                         </li>
