--- a/index.html
+++ b/index.html
@@ -304,47 +304,47 @@
 <!--Модалка-->
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-        <button data-modal-close  type="button" class="modal-button"> 
-            <svg class="icon-close" weight="18" height="18">
+        <button data-modal-close  type="button" class="modal__button"> 
+            <svg class="modal__icon-close" weight="18" height="18">
             <use href="./images/icons/symbol-defs.svg#icon-close"></use>
             </svg> 
         </button>
-         <div class="modal-wrapper">
-             <p class="modal-form-title">Оставьте свои данные, мы вам перезвоним</p>
-            <form class="modal-form">
-                <div class="form-group">
+         <div class="modal__wrapper">
+             <p class="modal__title">Оставьте свои данные, мы вам перезвоним</p>
+            <form>
+                <div class="form">
                     <label for="name">Имя</label>
                     <input type="text" name="name" id="name">
-                    <svg width="18" height="18" class="input-icon">
+                    <svg width="18" height="18" class="form__icon">
                         <use href="./images/icons/symbol-defs.svg#icon-person-new"></use>
                     </svg>
                 </div>
-                <div class="form-group">
+                <div class="form">
                     <label for="tel">Телефон</label>
                     <input type="tel" name="tel" id="tel">
-                    <svg width="18" height="18" class="input-icon">
+                    <svg width="18" height="18" class="form__icon">
                         <use href="./images/icons/symbol-defs.svg#icon-phone-new"></use>
                     </svg>
                 </div>
-                <div class="form-group">
+                <div class="form">
                     <label for="mail">Почта</label>
                     <input type="email" name="mail" id="mail">
-                    <svg width="18" height="18" class="input-icon">
+                    <svg width="18" height="18" class="form__icon">
                         <use href="./images/icons/symbol-defs.svg#icon-email-new"></use>
                     </svg>
                 </div>
-               <div class="form-group">
+               <div class="form">
                     <label for="feedback">Комментарий</label>
                     <textarea name="feedback"  placeholder="Введите текст" id="feedback"></textarea>
                </div>
-                <div class="modal-checkbox">
+                <div class="checkbox">
                     <label> 
-                        <input class="checkbox" type="checkbox" name="accept"><span class="icon-checkbox"></span> Соглашаюсь с рассылкой и принимаю <a class="checkbox-link" href="">Условия договора</a> 
+                        <input class="checkbox__input" type="checkbox" name="accept"><span class="checkbox__icon"></span> Соглашаюсь с рассылкой и принимаю <a class="checkbox-link" href="">Условия договора</a> 
                     </label>
 
                 </div>
-                <div class="submit-wrapper">
-                    <button type="submit" class="modal-button-submit">Отправить</button>
+                <div class="submit">
+                    <button type="submit" class="submit__button">Отправить</button>
                 </div>
             </form>
          </div>
