--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                </div>
                 <div class="checkbox">
                     <label> 
-                        <input class="checkbox__input" type="checkbox" name="accept"><span class="checkbox__icon"></span> Соглашаюсь с рассылкой и принимаю <a class="checkbox-link" href="">Условия договора</a> 
+                        <input class="checkbox__input" type="checkbox" name="accept"><span class="checkbox__icon"></span> Соглашаюсь с рассылкой и принимаю <a class="checkbox__link" href="">Условия договора</a> 
                     </label>
 
                 </div>
