правки после проверки

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,12 +16,12 @@
     <!--Хэдер-->
     <header class="header">
         <div class="container header__container">
-            <nav class="header__nav">
+            <nav class="nav">
                 <a href="" class="logo">Web<span class="logo--accent">Studio</span> </a>
-                <ul class="header__list">
-                    <li class="header__item"><a href="./index.html" class="header__link">Студия</a></li>
-                    <li class="header__item"><a href="" class="header__link header__link--current">Портфолио</a></li>
-                    <li class="header__item"><a href="#contacts" class="header__link">Контакты</a></li>
+                <ul class="nav__list">
+                    <li class="nav__item"><a href="./index.html" class="nav__link">Студия</a></li>
+                    <li class="nav__item"><a href="" class="nav__link nav__link--current">Портфолио</a></li>
+                    <li class="nav__item"><a href="#contacts" class="nav__link">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="contact-info">
@@ -40,15 +40,15 @@
     </header>
     <!--Основной блок портфолио-->
     <main>
-        <section class="section portfolio">
+        <section class="section">
             <div class="container">
-                <h1 class="portfolio--hidden">портфолио</h1>
-                <ul class="portfolio__button-list">
-                    <li class="portfolio__button-item"><button type="button" class="portfolio__button portfolio__button--accent">Все</button></li>
-                    <li class="portfolio__button-item"><button type="button" class="portfolio__button">Веб-сайты</button></li>
-                    <li class="portfolio__button-item"><button type="button" class="portfolio__button">Приложения</button></li>
-                    <li class="portfolio__button-item"><button type="button" class="portfolio__button">Дизайн</button></li>
-                    <li class="portfolio__button-item"><button type="button" class="portfolio__button">Маркетинг</button></li>
+                <h1 class="title--hidden">портфолио</h1>
+                <ul class="filtr">
+                    <li class="filtr__item"><button type="button" class="filtr__button filtr__button--accent">Все</button></li>
+                    <li class="filtr__item"><button type="button" class="filtr__button">Веб-сайты</button></li>
+                    <li class="filtr__item"><button type="button" class="filtr__button">Приложения</button></li>
+                    <li class="filtr__item"><button type="button" class="filtr__button">Дизайн</button></li>
+                    <li class="filtr__item"><button type="button" class="filtr__button">Маркетинг</button></li>
                 </ul>
                 <ul class="examples-set">
                     <li class="examples-set__item"> 
