--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
 <header class="header">
     <div class="container header__container">
-        <nav class="header__nav">
+        <nav class="nav">
         <a href="" class="logo">Web<span class="logo--accent">Studio</span> </a>
-        <ul class="header__list">
-            <li class="header__item"><a href="" class="header__link header__link--current">Студия</a></li>
-            <li class="header__item"><a href="./portfolio.html" class="header__link">Портфолио</a></li>
-            <li class="header__item"><a href="#contacts" class="header__link">Контакты</a></li>
+        <ul class="nav__list">
+            <li class="nav__item"><a href="" class="nav__link nav__link--current">Студия</a></li>
+            <li class="nav__item"><a href="./portfolio.html" class="nav__link">Портфолио</a></li>
+            <li class="nav__item"><a href="#contacts" class="nav__link">Контакты</a></li>
         </ul>
         </nav>
         <ul class="contact-info">
@@ -51,12 +51,12 @@
 
 <!--Особенности-->
 
-    <section class="section features">
+    <section class="section">
         <div class="container">
-            <h2 class="features--hidden">Особенности</h2>
-            <ul class="features__list">
+            <h2 class="title--hidden">Особенности</h2>
+            <ul class="features">
                 <li class="features__item">
-                    <div class="features__bcg">
+                    <div class="features__background">
                     <svg  width="70" height="70">
                         <use href="./images/icons/symbol-defs.svg#icon-antenna"></use>
                     </svg>
@@ -65,7 +65,7 @@
                 <p class="features__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li class="features__item">
-                    <div class="features__bcg">
+                    <div class="features__background">
                     <svg  width="70" height="70">
                         <use href="./images/icons/symbol-defs.svg#icon-clock"></use>
                     </svg>
@@ -74,7 +74,7 @@
                 <p class="features__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li class="features__item">
-                    <div class="features__bcg">
+                    <div class="features__background">
                     <svg  width="70" height="70">
                         <use href="./images/icons/symbol-defs.svg#icon-diagram"></use>
                     </svg>
@@ -83,7 +83,7 @@
                 <p class="features__text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li class="features__item">
-                    <div class="features__bcg">
+                    <div class="features__background">
                     <svg  width="70" height="70">
                         <use href="./images/icons/symbol-defs.svg#icon-astronaut"></use>
                     </svg>
@@ -97,7 +97,7 @@
 <!--Чем мы занимаемся-->
     <section class="section activities">
         <div class="container">
-            <h2 class="activities__title">Чем мы занимаемся</h2>
+            <h2 class="section__title">Чем мы занимаемся</h2>
             <ul class="activities__list">
                 <li> <div class="activities__thumb"> <img src="images/box1(1).jpg" alt="работа за ноутбуком" width="370"> <p class="activities__text">десктопные приложения</p> </div> </li>
                 <li> <div class="activities__thumb"> <img src="images/box2(1).jpg" alt="мобильный телефон" width="370"> <p class="activities__text">мобильные приложения</p> </div> </li> 
@@ -108,9 +108,9 @@
  <!--Команда-->
     <section class="section team">
         <div class="container">
-            <h2 class="team__title">Наша команда</h2>
+            <h2 class="section__title">Наша команда</h2>
             <ul class="card-set">
-                <li class="card-set__item"> <img class="team__img" src="images/img-1.jpg" alt="фото" width="270">
+                <li class="card-set__item"> <img class="card-set__img" src="images/img-1.jpg" alt="фото" width="270">
                     <div class="card-set__wrapper" ><h3 class="card-set__subtitle">Игорь Демьяненко</h3>
                     <p class="card-set__text">Product Designer</p>
                     <ul class="card-set__social-list">
@@ -218,10 +218,10 @@
 
 <!-- Постоянные клиенты-->
 
-<section class="section clients">
+<section class="section">
     <div class="container">
-        <h2 class="clients__title">Постоянные клиенты</h2>
-        <ul class="clients__list">
+        <h2 class="section__title">Постоянные клиенты</h2>
+        <ul class="clients">
             <li> 
                 <a class="clients__border" href=""> <SVG class="clients__icon" width="106" height="60"><use href="./images/icons/symbol-defs.svg#icon-Logo-opt1"></use></SVG></a>
             </li>
